--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>Moments</title>
 		<meta name="description" content="Moments">
-		<link rel="stylesheet" href="styles/styles.css">
+		<link rel="stylesheet" href="styles/backup.css">
 	</head>
 
 	<body>
@@ -24,9 +24,7 @@
 		</div>
 
 		<main class="viewport">
-			<div class="parallax-parent">
-				<div class="background-colours"></div>
-
+			<div class="parallax-parent" id="test">
 				<section class="parallax-child-container parallax-child-container_one">
 					<div class="parallax-child">
 						<h1>Moments</h1>
@@ -57,33 +55,25 @@
 					</div>
 				</section>
 
-				<section class="parallax-child-container parallax-child-container_six">
-					<div class="parallax-child">
-						<h1>Hello World 6</h1>
-					</div>
-				</section>
-
-				<section class="parallax-child-container parallax-child-container_seven">
-					<div class="parallax-child">
-						<h1>Hello World 7</h1>
-					</div>
-				</section>
-
-				<section class="parallax-child-container parallax-child-container_eight">
-					<div class="parallax-child">
-						<h1>Hello World 8</h1>
-					</div>
-				</section>
-
 				<div class="parallax-background">
-					<img class ="first-image parallax-image" src="assets/image1.svg" alt="">
-					<img class ="second-image parallax-image" src="assets/image2.svg" alt="">
-					<img class ="third-image parallax-image" src="assets/image3.svg" alt="">
-					<img class ="fourth-image parallax-image" src="assets/image4.svg" alt="">
-					<img class ="fifth-image parallax-image" src="assets/image5.svg" alt="">
+					<div class="parallax-image-container">
+						<img class ="first-image parallax-image" src="assets/image1.svg" alt="">
+					</div>
+					<div class="parallax-image-container">
+						<img class ="second-image parallax-image" src="assets/image2.svg" alt="">
+					</div>
+					<div class="parallax-image-container">
+						<img class ="third-image parallax-image" src="assets/image3.svg" alt="">
+					</div>
+					<div class="parallax-image-container">
+						<img class ="fourth-image parallax-image" src="assets/image4.svg" alt="">
+					</div>
+					<div class="parallax-image-container">
+						<img class ="fifth-image parallax-image" src="assets/image5.svg" alt="">
+					</div>
 				</div>
 			</div>
 		</main>
-		<script src="scripts.js"></script>
+		<!-- <script src="scripts.js"></script> -->
 	</body>
 </html>
