--- a/newindex.html
+++ b/newindex.html
@@ -29,6 +29,20 @@
                     <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
                 </div>
             </section>
+            </section>
+            <section class="background">
+                <div class="content-wrapper">
+                    <p class="content-title">Etiam consequat lectus.</p>
+                    <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
+                </div>
+            </section>
+            </section>
+            <section class="background">
+                <div class="content-wrapper">
+                    <p class="content-title">Etiam consequat lectus.</p>
+                    <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
+                </div>
+            </section>
         </div>
 
         <!-- partial -->
