--- a/newindex.html
+++ b/newindex.html
@@ -9,38 +9,51 @@
 
     </head>
     <body>
+		<div class="sidenav">
+			<div class="sidenav-top">
+				<a href="#"><img src="assets/logo.svg" alt="logo"></a>
+			</div>
+			<div class="sidenav-bottom">
+				<div class="inst-logo">
+					<a href="https://www.instagram.com/matthewallenuk/">
+                        <img src="assets/instagram.svg" alt="logo">
+                    </a>
+				</div>
+				<div class="inst-text">
+					MATTHEW ALLEN
+				</div>
+			</div>
+		</div>
         <!-- partial:index.partial.html -->
         <div class="container">
             <section class="background">
                 <div class="content-wrapper">
-                    <p class="content-title">Full Page Parallax Effect</p>
-                    <p class="content-subtitle">Scroll down and up to see the effect!</p>
+                    <p class="content-title">Moments</p>
+                    <p class="content">Moments are a collection of artworks i have designed over the years, they stand away from my portfolio or day 2 day design job but these are the pieces of work that make up me. The true moments of inspiration and creativity that happen for me. Looking back ive tried to recreate the methods or flow used to create these pieces but often they are lost. This is likely due to me being a huge stoner, but it makes me appreciate them,</p>
+                    <p class="content-mini">Scroll right to see more</p>
                 </div>
             </section>
             <section class="background">
                 <div class="content-wrapper">
-                    <p class="content-title">Cras lacinia non eros nec semper.</p>
-                    <p class="content-subtitle">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ut massa mattis nibh semper pretium.</p>
+                    <p class="content">I feel like most of these pieces made them selves how ever wierd that may sound. There is rarely an opening idea. I fuck with shapes. I see the process similar to Pareidolia. The ideas begin to build them selves once a visual pattern emerges.</p>
                 </div>
             </section>
             <section class="background">
                 <div class="content-wrapper">
-                    <p class="content-title">Etiam consequat lectus.</p>
-                    <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
-                </div>
-            </section>
-            </section>
-            <section class="background">
-                <div class="content-wrapper">
-                    <p class="content-title">Etiam consequat lectus.</p>
-                    <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
+                    <p class="content">Its hard to find any time to produce the things i want to in betwen of working a full UI/UX job and having a family. What time i can put it starts with usually jumping into C4D and photoshop</p>
                 </div>
             </section>
             </section>
             <section class="background">
                 <div class="content-wrapper">
-                    <p class="content-title">Etiam consequat lectus.</p>
-                    <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
+                    <p class="content-title">Colour scares me</p>
+                    <p class="content">Always a battle. I just never full 100% confident when finishing a colour piece. Alot of my black and white work is done in colour until the final 10%. BW is my safety net. Ive promised myself to use colour more in my personal work. I envy(amjellyof) those who apply vibrant colours </p>
+                </div>
+            </section>
+            </section>
+            <section class="background">
+                <div class="content-wrapper">
+                    <p class="content">I feel like most of these pieces made them selves how ever wierd that may sound. There is rarely an opening idea. I fuck with shapes. I see the process similar to Pareidolia. The ideas begin to build them selves once a visual pattern emerges.</p>
                 </div>
             </section>
         </div>
