--- a/newindex.html
+++ b/newindex.html
@@ -6,12 +6,16 @@
         <meta name="description" content="Moments">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
         <link rel="stylesheet" href="styles/styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     </head>
     <body>
 		<div class="sidenav">
 			<div class="sidenav-top">
-				<a href="#"><img src="assets/logo.svg" alt="logo"></a>
+				<a href="#">
+                    <img src="assets/logo.svg" alt="logo">
+                </a>
 			</div>
 			<div class="sidenav-bottom">
 				<div class="inst-logo">
@@ -30,7 +34,7 @@
                 <div class="content-wrapper">
                     <p class="content-title">Moments</p>
                     <p class="content">Moments are a collection of artworks i have designed over the years, they stand away from my portfolio or day 2 day design job but these are the pieces of work that make up me. The true moments of inspiration and creativity that happen for me. Looking back ive tried to recreate the methods or flow used to create these pieces but often they are lost. This is likely due to me being a huge stoner, but it makes me appreciate them,</p>
-                    <p class="content-mini">Scroll right to see more</p>
+                    <p class="content-mini">Scroll right to see more <img src="./assets/right-arrow.svg" alt=""></p>
                 </div>
             </section>
             <section class="background">
