--- a/index.html
+++ b/index.html
@@ -1,79 +1,70 @@
 <!DOCTYPE html>
+<html lang="en" >
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Moments</title>
+        <meta name="description" content="Moments">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Moments</title>
-		<meta name="description" content="Moments">
-		<link rel="stylesheet" href="styles/backup.css">
-	</head>
-
-	<body>
+    </head>
+    <body>
 		<div class="sidenav">
 			<div class="sidenav-top">
-				<a href="#"><img src="assets/logo.svg" alt="logo"></a>
+				<a href="#">
+                    <img src="assets/logo.svg" alt="logo">
+                </a>
 			</div>
 			<div class="sidenav-bottom">
-				<div class="inst-text">
-					<a href="https://www.instagram.com/matthewallenuk/">MATTHEW ALLEN</a>
-				</div>
 				<div class="inst-logo">
-					<img src="assets/instagram.svg" alt="logo">
+					<a href="https://www.instagram.com/matthewallenuk/">
+                        <img src="assets/instagram.svg" alt="logo">
+                    </a>
+				</div>
+				<div class="inst-text">
+					MATTHEW ALLEN
 				</div>
 			</div>
 		</div>
+        <!-- partial:index.partial.html -->
+        <div class="container">
+            <section class="background">
+                <div class="content-wrapper">
+                    <p class="content-title">Moments</p>
+                    <p class="content">Moments are a collection of artworks i have designed over the years, they stand away from my portfolio or day 2 day design job but these are the pieces of work that make up me. The true moments of inspiration and creativity that happen for me. Looking back ive tried to recreate the methods or flow used to create these pieces but often they are lost. This is likely due to me being a huge stoner, but it makes me appreciate them,</p>
+                    <p class="content-mini">Scroll right to see more <img src="./assets/right-arrow.svg" alt=""></p>
+                </div>
+            </section>
+            <section class="background">
+                <div class="content-wrapper">
+                    <p class="content">I feel like most of these pieces made them selves how ever wierd that may sound. There is rarely an opening idea. I fuck with shapes. I see the process similar to Pareidolia. The ideas begin to build them selves once a visual pattern emerges.</p>
+                </div>
+            </section>
+            <section class="background">
+                <div class="content-wrapper">
+                    <p class="content">Its hard to find any time to produce the things i want to in betwen of working a full UI/UX job and having a family. What time i can put it starts with usually jumping into C4D and photoshop</p>
+                </div>
+            </section>
+            </section>
+            <section class="background">
+                <div class="content-wrapper">
+                    <p class="content-title">Colour scares me</p>
+                    <p class="content">Always a battle. I just never full 100% confident when finishing a colour piece. Alot of my black and white work is done in colour until the final 10%. BW is my safety net. Ive promised myself to use colour more in my personal work. I envy(amjellyof) those who apply vibrant colours </p>
+                </div>
+            </section>
+            </section>
+            <section class="background">
+                <div class="content-wrapper">
+                    <p class="content">I feel like most of these pieces made them selves how ever wierd that may sound. There is rarely an opening idea. I fuck with shapes. I see the process similar to Pareidolia. The ideas begin to build them selves once a visual pattern emerges.</p>
+                </div>
+            </section>
+        </div>
 
-		<main class="viewport">
-			<div class="parallax-parent" id="test">
-				<section class="parallax-child-container parallax-child-container_one">
-					<div class="parallax-child">
-						<h1>Moments</h1>
-					</div>
-				</section>
-
-				<section class="parallax-child-container parallax-child-container_two">
-					<div class="parallax-child">
-						<h1>Hello World 2</h1>
-					</div>
-				</section>
-
-				<section class="parallax-child-container parallax-child-container_three">
-					<div class="parallax-child">
-						<h1>Hello World 3</h1>
-					</div>
-				</section>
-
-				<section class="parallax-child-container parallax-child-container_four">
-					<div class="parallax-child">
-						<h1>Hello World 4</h1>
-					</div>
-				</section>
-
-				<section class="parallax-child-container parallax-child-container_five">
-					<div class="parallax-child">
-						<h1>Hello World 5</h1>
-					</div>
-				</section>
-
-				<div class="parallax-background">
-					<div class="parallax-image-container">
-						<img class ="first-image parallax-image" src="assets/image1.svg" alt="">
-					</div>
-					<div class="parallax-image-container">
-						<img class ="second-image parallax-image" src="assets/image2.svg" alt="">
-					</div>
-					<div class="parallax-image-container">
-						<img class ="third-image parallax-image" src="assets/image3.svg" alt="">
-					</div>
-					<div class="parallax-image-container">
-						<img class ="fourth-image parallax-image" src="assets/image4.svg" alt="">
-					</div>
-					<div class="parallax-image-container">
-						<img class ="fifth-image parallax-image" src="assets/image5.svg" alt="">
-					</div>
-				</div>
-			</div>
-		</main>
-		<!-- <script src="scripts.js"></script> -->
-	</body>
+        <!-- partial -->
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js'></script>
+        <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script><script  src="newscript.js"></script>
+    </body>
 </html>
